--- a/Practical_Machine_Learning_-_Prediction_Project.html
+++ b/Practical_Machine_Learning_-_Prediction_Project.html
@@ -132,6 +132,21 @@ $(document).ready(function () {
 <div id="loading-libraries" class="section level3">
 <h3>1. Loading libraries</h3>
 <p>The libraries needed: caret, rpart, randomForest, reshape2, AppliedPredictiveModeling are loaded in workspace.</p>
+<pre><code>## Loading required package: lattice</code></pre>
+<pre><code>## Loading required package: ggplot2</code></pre>
+<pre><code>## Rattle: A free graphical interface for data science with R.
+## Version 5.1.0 Copyright (c) 2006-2017 Togaware Pty Ltd.
+## Type 'rattle()' to shake, rattle, and roll your data.</code></pre>
+<pre><code>## randomForest 4.6-12</code></pre>
+<pre><code>## Type rfNews() to see new features/changes/bug fixes.</code></pre>
+<pre><code>## 
+## Attaching package: 'randomForest'</code></pre>
+<pre><code>## The following object is masked from 'package:rattle':
+## 
+##     importance</code></pre>
+<pre><code>## The following object is masked from 'package:ggplot2':
+## 
+##     margin</code></pre>
 </div>
 <div id="data-cleaning-and-preparation" class="section level3">
 <h3>2. Data cleaning and preparation</h3>
